# $Id: $

2007-06-16  Benoit Grégoire  <bock@step.polymtl.ca>
	* Preliminary skinning of the menu
	* Network::getNumOnlineUsers():  Fix #40 by counting active connexion tokens, not distinct user id's.  That way users logged in twice (splash-only, or username if allowed in network config) will be counted twice. 
	* UIUserList_getUserUI.tpl:  Fix #337
	* Node.php:  Improve getCurrentRealNode()
	* Implement #4:  Allow the user to easily come back to the portal by typing in the root auth server adress from a hotspot.
	* Log the system information sent with the gateway since almost forever:  sys_uptime, sys_memfree, sys_load, wifidog_uptime
	* NodeStatus.php:  Include the above information
	* node_list.html:  Include wifidog_uptime if the hotspot is up.
	* Menu.php:  Sort menus alphabetically according to the user's locale.  TODO:  Implement menu weights.
	* NodeLists:  Only list node types that have dependencies met in the menu.  Refactor the NodeLists for proper object-orientation.
	
2007-06-12  Benoit Grégoire  <bock@step.polymtl.ca>
	* MainUI.php:  Fix label problem in language chooser.
	
2007-06-12  Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix #291 by adding a proper warning and location of documentation
	* Fix #336:  Add Swedish translation by Christian Svensson <blue ATT cmd.nu>

2007-06-12  Benoit Grégoire  <bock@step.polymtl.ca>
	-This is a behemoth "the road to 1.0"  commit.  I've been working on this for 6 months, 
	and it's reached the point where others can help.  Those are very far reaching changes, please
	notify me if anything isn't working right (and im sure I can't have caught everything).
    * Completely revamp exception handling, all exceptions are now trapped and handled centrally.
    * Major changes in the login process to allow repeating a request after a time out or missing permission exception.
    * New user roles architecture,  as described in https://dev.wifidog.org/wiki/doc/developer/UserRolesArchitecture