@@ -1,6 +1,7 @@
 # $Id: $
 
 2007-06-16  Benoit Grégoire  <bock@step.polymtl.ca>
+	* Fix display of wifidog uptime in node list
 	* Preliminary skinning of the menu
 	* Network::getNumOnlineUsers():  Fix #40 by counting active connexion tokens, not distinct user id's.  That way users logged in twice (splash-only, or username if allowed in network config) will be counted twice. 
 	* UIUserList_getUserUI.tpl:  Fix #337
